add: customerを充実
